--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <body>
-<video width="320" height="240" controls>
+<video width="1920" height="1080" controls autoplay>
   <source src="YOU_ARE_AN_IDIOT.webm" type="video/webm">
 </video>
 <script>
