--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Super Logout</title>
+  <title>IDIOT</title>
   <style>
 
     @import url(http://fonts.googleapis.com/css?family=Share+Tech+Mono);
@@ -351,13 +351,13 @@
       </defs>
       <g>
         <text x="0" y="100">
-          SUPERLOGOUT
+          
         </text>
       </g>
   </svg>
 
-  <h3>Add your company logout page via creating a pull request here: <a href="https://github.com/superlogout/superlogout.github.io">github.com/superlogout/superlogout.github.io</a></h3>
-  <ul id="sitelist">
+  <h3></h3>
+  <ul id="">
   </ul>
 </body>
 </html>
