--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
       font-size: 1em;
       color: #989898;
     }
-
+	
+	div.center {
+			text-align: center;
+			}	
+	
     ul {
       width: 500px;
       margin: 2em auto;
@@ -301,9 +305,11 @@
   </script>
 </head>
 <body>
-<video width="1920" height="1080" controls autoplay>
-  <source src="YOU_ARE_AN_IDIOT.webm" type="video/webm">
-</video>
+<div class="center">
+  <video controls>
+    <source src="YOU_ARE_AN_IDIOT.webm" type="video/webm" />
+  </video>
+</div>
   <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"      width="600px" height="100px" viewBox="0 0 600 100">
     <style type="text/css">
       <![CDATA[
@@ -351,13 +357,13 @@
       </defs>
       <g>
         <text x="0" y="100">
-          
+          LOGGED OUT!
         </text>
       </g>
   </svg>
 
-  <h3></h3>
-  <ul id="">
+  <h3>I hope you remember your passwords.</h3>
+  <ul id="sitelist">
   </ul>
 </body>
 </html>
