--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       </defs>
       <g>
         <text x="0" y="100">
-          LOGGED OUT!
+          TROLLED!
         </text>
       </g>
   </svg>
