--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
+	<html>
+    <title>Not enough for me.</title>
+    <meta content="Not enough." property="og:title" />
+    <meta content="Domain courtesy of fines." property="og:description" />
+    <meta content="https://notenoughfor.me/" property="og:url" />
+    <meta content="https://data.whicdn.com/images/364071088/original.jpg" property="og:image" />
+    <meta content="#000000" data-react-helmet="true" name="theme-color" />
 	<head>
 		WIP
 	</head>
