--- a/user.html
+++ b/user.html
@@ -3,6 +3,11 @@
         <base href="https://notenoughfor.me/user">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta content="Not enough." property="og:title" />
+    <meta content="Domain courtesy of fines." property="og:description" />
+    <meta content="https://notenoughfor.me/" property="og:url" />
+    <meta content="https://data.whicdn.com/images/364071088/original.jpg" property="og:image" />
+    <meta content="#000000" data-react-helmet="true" name="theme-color" />
 
         
         
