--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
     <meta content="https://notenoughfor.me/" property="og:url" />
     <meta content="https://data.whicdn.com/images/364071088/original.jpg" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
-	<head>
-		WIP
-	</head>
+	   <body style="background-color:black;">
+<style>
+p {
+ text-align:center;
+ color:white;
+ font-size:25;
+ font-family:Fantasy, cursive;
+}
+img {
+	text-align:center;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+</style>
+      <br>
+      <br>
+      <br>
+            <br>
+      <br>
+      <br>
+            <br>
+      <br>
+      <br>
+            <br>
+      <br>
+      <br>
+      <img src="https://i.imgur.com/6pqbzJd.png" class="center"width="400" height="600">
+   </body>
 </html>
