--- a/user.html
+++ b/user.html
@@ -208,7 +208,7 @@ Hiatus. <br>
             <footer id="footer" class="link-footer">
                 
                 <div id="branding" class="link-footer-branding">
-                                                            e.rip                                                    </div>
+                                                                                                                </div>
             </footer>
 
         </div>
