--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ img {
       <br>
       <br>
             <br>
-			   <h2 id="userip"></h2> 
+			   <h id="userip"></h> 
       <br>
       <br>
       <br>
