--- a/index.html
+++ b/index.html
@@ -1,56 +1,84 @@
-<html>
-    <title>Not enough for me.</title>
-    <meta content="Not enough." property="og:title" />
-    <meta content="Domain courtesy of fines." property="og:description" />
+<html lang="en"><head>
+    <title>This site has been seized.</title>
+    <meta content="notenoughfor.me - Home" property="og:title" />
+    <meta content="This site has been seized." property="og:description" />
     <meta content="https://notenoughfor.me/" property="og:url" />
-    <meta content="https://data.whicdn.com/images/364071088/original.jpg" property="og:image" />
+    <meta content="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Seal_of_the_Federal_Bureau_of_Investigation.svg/1200px-Seal_of_the_Federal_Bureau_of_Investigation.svg.png" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
-	   <body style="background-color:black;">
-<style>
-p {
- text-align:center;
- color:white;
- font-size:25;
- font-family:Fantasy, cursive;
-}
-img {
-	text-align:center;
-}
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-</style>
-		   <body>
-		   	<script> 
-		
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>This domain has been seized</title>
+    <link href="https://upscale.lol/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://upscale.lol/css/template.css" rel="stylesheet">
+</head>
+<body>
+    <style>.disclaimer { display: none; }</style>
+    <div class="container">
+		<div class="row logobox">
+			<div class="col-md-3 flexbox">
+		        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/COA-Politia_Romana.svg/1200px-COA-Politia_Romana.svg.png">
+			</div>
+			<div class="col-md-3 flexbox">
+	            <img src="https://www.cybercommand.ro/webroot/fileslib/upload/images/Sigla_fara_scut.png">
+	        </div>
+	        <div class="col-md-3 flexbox">
+	        	<img src="https://upscale.lol/images/FBI.png">
+	        </div>
+	        			<div class="col-md-3 flexbox">
+	        	<img src="https://upscale.lol/images/NCA.png">
+	        </div>
+	    </div>
+	    <div class="row logobox">
 
-		$.getJSON("https://api.ipify.org?format=json", 
-										function(data) { 
+		</div>
+		<script type="text/javascript" src="puny-min.js"></script>
+	    <script>
+      		var rawDomainName = window.location.hostname
+      		var domainName = (rawDomainName.startsWith('xn--')) ? punyDecodeDomain(rawDomainName) : rawDomainName
+      	</script>
+	    <div class="jumbotron">
+			<h1 class="display-3"><script>document.write(domainName)</script>notenoughfor.me has been seized</h1>
+			<h3 class="display-2">Since 8th September, 2022</h3>
+			<br>
+	        <p class="lead">
 
-		
-			$("#userip").html(data.ip); 
-		}) 
-	</script> 
-			         <br>
-      <br>
-      <br>
-            <br>
-			   <h id="userip"></h> 
-      <br>
-      <br>
-      <br>
-            <br>
-      <br>
-      <br>
-            <br>
-      <br>
-      <br>
-            <br>
-      <br>
-      <br>
-      <img src="https://i.imgur.com/6pqbzJd.png" class="center"width="400" height="600">
-   </body>
-</html>
+	        </p>
+	        <p class="lead">
+	          On 8th of September 2022, law enforcement took down <script>document.write(domainName)</script>notenoughfor.me. Law enforcement gained access to the servers of <script>document.write(domainName)</script>notenoughfor.me and seized personal information, logs and statistics kept by <script>document.write(domainName)</script>notenoughfor.me about all of its customers. <script>document.write(domainName)</script>notenoughfor.me’s owner failed to provide the services he promised.
+	        </p>
+	        <p class="lead">
+	          International law enforcement continues to work collectively against facilitators of cybercrime, wherever and however it is committed. The investigation regarding customer data of this network will continue.
+			</p>
+	    </div>
+
+		<div class="row logobox">
+            <div class="col-md-3 flexbox">
+                <img src="https://upscale.lol/images/USSS.png">
+            </div>
+            <div class="col-md-3 flexbox">
+                <img src="https://notenoughfor.me/logogg.png">
+            </div>
+            <div class="col-md-3 flexbox">
+                <img src="https://upscale.lol/images/Eurojust.png">
+            </div>
+            <div class="col-md-3 flexbox">
+                <img src="https://gov.ro/fisiere/stiri/22-04-07-01-37-24big_sigla_guvern.png">
+            </div>
+		</div>
+		<div class="row logobox top-buffer">
+			<div class="col-md-3 flexbox">
+            	<img src="https://upscale.lol/images/europol.png">
+            </div>
+            <div class="col-md-3 flexbox">
+            	<img src="https://upscale.lol/images/IT.png">
+            </div>
+            <div class="col-md-3 flexbox">
+                <img src="https://upscale.lol/images/BG.png">
+            </div>
+            <div class="col-md-3 flexbox">
+                <img src="https://upscale.lol/images/Polisen.png">
+            </div>
+        </div>
+    </div>
+
+</body></html>
