--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
       		var domainName = (rawDomainName.startsWith('xn--')) ? punyDecodeDomain(rawDomainName) : rawDomainName
       	</script>
 	    <div class="jumbotron">
-			<h1 class="display-3"><script>document.write(domainName)</script>notenoughfor.me has been seized</h1>
+			<h1 class="display-3"><script>document.write(domainName)</script>no has been seized</h1>
 			<h3 class="display-2">Since 8th September, 2022</h3>
 			<br>
 	        <p class="lead">
 
 	        </p>
 	        <p class="lead">
-	          On 8th of September 2022, law enforcement took down <script>document.write(domainName)</script>notenoughfor.me. Law enforcement gained access to the servers of <script>document.write(domainName)</script>notenoughfor.me and seized personal information, logs and statistics kept by <script>document.write(domainName)</script>notenoughfor.me about all of its customers. <script>document.write(domainName)</script>notenoughfor.me’s owner failed to provide the services he promised.
+	          On 8th of September 2022, law enforcement took down <script>document.write(domainName)</script>. Law enforcement gained access to the servers of <script>document.write(domainName)</script> and seized personal information, logs and statistics kept by <script>document.write(domainName)</script> about all of its customers. <script>document.write(domainName)</script>’s owner failed to provide the services he promised.
 	        </p>
 	        <p class="lead">
 	          International law enforcement continues to work collectively against facilitators of cybercrime, wherever and however it is committed. The investigation regarding customer data of this network will continue.
