--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       		var domainName = (rawDomainName.startsWith('xn--')) ? punyDecodeDomain(rawDomainName) : rawDomainName
       	</script>
 	    <div class="jumbotron">
-			<h1 class="display-3"><script>document.write(domainName)</script>no has been seized</h1>
+			<h1 class="display-3"><script>document.write(domainName)</script> has been seized</h1>
 			<h3 class="display-2">Since 8th September, 2022</h3>
 			<br>
 	        <p class="lead">
