--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
         <br><br>
         Wybierz opcję z <i>M E N U</i>
     </div>
+        <div class="sponsor-menu-options">
+			<a href="https://ihlu.neocities.org/" class="menu-opt-a">Sponsor<br>Strony</a>
+		</div>
+    </div>
 
 
     <div id="footer">
