--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         Wybierz opcję z <i>M E N U</i>
     </div>
         <div class="sponsor-menu-options">
-			<a href="https://ihlu.neocities.org/" class="menu-opt-a">Sponsor<br>Strony</a>
+			<a href="https://dose.lol/ban" class="menu-opt-a">Sponsor<br>Strony</a>
 		</div>
     </div>
 
