--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Texturina:opsz@12..72&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-
+   <title>A Z E R O Y</title>
+    <meta content="A Z E R O Y" property="og:title" />
+    <meta content="Azeroy to strona poświęcona muzyce litwińskiego artysty Yabujina" property="og:description" />
+    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+    <meta content="https://notenoughfor.me/img/yabu-smoke.gif" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
