--- a/index.html
+++ b/index.html
@@ -1,56 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Texturina:opsz@12..72&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-   <title>A Z E R O Y</title>
-    <meta content="A Z E R O Y" property="og:title" />
-    <meta content="Azeroy to strona poświęcona muzyce litwińskiego artysty Yabujina" property="og:description" />
-    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-    <meta content="https://notenoughfor.me/img/yabu-smoke.gif" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Azeroy</title>
-
-    <link rel="stylesheet" href="styl.css">
-</head>
-<body>
-    <div id="header">
-        <img class="yabu-logo" src="img/yabu-logo.png" alt="Yabujin Logo">
-        <a href="index.html" class="white-hover">A z e r o y</a>
-        <img class="yabu-logo" src="img/yabu-logo.png" alt="Yabujin Logo">
-    </div>
-
-
-    <div id="menu">
-
-        M E N U
-
-        <div class="menu-options">
-            <a href="yabujin.html" class="menu-opt-a">Yabujin</a><br>
-            <a href="djgyrottazao.html" class="menu-opt-a">𝔇𝔍 6YRథ్‌٣٣A ЗАО</a><br>
-        </div>
-
-        <div class="sponsor-menu-options">
-			<a href="https://dose.lol/ban" class="menu-opt-a">Sponsor<br>Strony</a>
-		</div>
-    </div>
-
-
-    <div id="content">
-        <h1>Azeroy to strona poświęcona muzyce litwińskiego artysty Yabujina</h1>
-        <img class="yabu-smoke-gif" src="img/yabu-smoke.gif" alt="Yabujin Smoke">
-        <br><br>
-        Wybierz opcję z <i>M E N U</i>
-    </div>
-
-
-    <div id="footer">
-        &copy; D R T &nbsp; 1 9 9 6 - 2 0 2 2
-    </div>
-</body>
+<html>
+	<body>
+		<br> <br> <br> <br> <br> <br> <br> <br> <br>
+		<center>
+			I wait.
+		</center>
+	</body>
 </html>
