--- a/leonbrown.html
+++ b/leonbrown.html
@@ -2,6 +2,7 @@
   <body>
     <br> <br> <br> <br> <br> <br> <br> <br> 
     <center> Hope this was extremely easy for you. Future awaits more, but how could we forget the past? </center>
-    </body
+    <center> VArTZrEd </center>
+  </body
     
 </html>
