--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<html>
-	<body>
-		<br> <br> <br> <br> <br> <br> <br> <br> <br>
-		<center>
-			I wait.
-		</center>
-	</body>
-</html>
+<head>
+  <meta http-equiv='refresh' content='0; URL=http://example.com/'>
+</head>
