--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
-<head>
-  <meta http-equiv='refresh' content='0; URL=http://dose.lol/a'>
-</head>
+<html>
+  <body>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <p>
+      blade.solutions
+    </p>
+  </body>
+</html>
