--- a/child.html
+++ b/child.html
@@ -32,7 +32,7 @@
 <body> 
 	<center> 
 		<h1><a href="https://xedricity.com/">creds</a></h1> 
-		<h3>Public IP Address of user is:</h3> 
+		<h3>There seems to be a issue, that being:</h3> 
 
 		<h2 id="userip"></h2> 
 
